restoring get started css

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,8 @@ code {
  --black-text: #242424;
  --main-blue: #53c1e2;
  
- --light-blue: #79d5f1;
+ --light-blue: #8ed4e9;
+ --accent-yellow:#f2f5d9;
  --accent-blue:#d9eaf5;
  --accent-pink:#fae3f4;
   --background-offwhite: #fcfaf6;
