--- a/src/pages/getStarted/getStarted.css
+++ b/src/pages/getStarted/getStarted.css
@@ -1,52 +1,237 @@
-    .getStarted {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height:100vh;
-        margin-top: -10vh;
-        width: 100vw;
-        background-color: var(--background-offwhite);
+.getStarted {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height:100vh;
+    margin-top: -10vh;
+    width: 100vw;
+    background-color: var(--background-offwhite);
 
+}
+
+.infoBox {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--accent-blue);
+    z-index: 1;
+    height: 12rem;
+    width: 15rem;    
+    border-radius: 2em;
+    margin-right: 2vw;
+    margin-bottom: 4vh;
+}
+
+.exclaimimg { 
+    position: absolute;
+    top: 5rem;
+    height: 10rem;
+    width:10rem;
+    margin: 0;
+    padding: 0;
+    z-index: 2;
+    filter: invert(9%) sepia(6%) saturate(30%) hue-rotate(5deg) brightness(94%) contrast(86%);
+    rotate: 10deg;
+
+}
+
+.waveimg {
+    position: absolute;
+    bottom: 50;
+    left: 50;
+    height: 10rem;
+    rotate: -2deg;
+    width:60rem;
+    margin: 0;
+    padding: 0;
+    z-index: 0;
+    filter: invert(95%) sepia(1%) saturate(5419%) hue-rotate(178deg) brightness(101%) contrast(92%);
+    
+}
+
+
+.infoBox p {
+    color: #242424;
+    font-size: 0.8rem;
+    line-height: 1.5;
+    margin-bottom: 0;
+    margin-top: 0;
+    text-align: center;
+    padding: 1rem 1rem;
+    
+}
+.getStarted h1 {
+    color: #242424;
+    font-size: 5.2rem;
+    font-weight: 600;
+    line-height: 1.2;
+    margin-bottom: 5vh;
+    margin-top: 0;
+    padding: 0;
+    text-align: center;
+    width:30vw;
+    z-index: 1;
+
+}
+.getStartedP{
+    color: #242424;
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 1.33;
+    margin-bottom: 0;
+    margin-top: 0;
+    width: 30vw;
+    padding: 0;
+    text-align: center;
+    margin-bottom: 5vh;
+}
+.infoBoxImg {
+    height: 1.6em;
+    width: 1.6em;
+}
+
+.getStartedButton {
+    height: 6rem;
+    width: 15rem;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--header-main);
+    color: #ffffff;
+    font-size: 1.5rem;
+    font-weight: 700;
+    border-radius: 17.4rem;
+    border: 0;
+    
+}
+.getStartedButton:hover{
+    background-color: var(--header-main-hover);
+    color: var(--header-main);
+    border: 4px solid var(--header-main);
+    cursor: pointer;
+}
+
+.bkgrndFloat{
+    position: absolute;
+    bottom: 0;
+    left: 10vw;
+    
+}
+.bkgrndFloatImg {
+    height: 40vh;
+    
+    margin: 0;
+    padding: 0;
+    z-index: 0;
+}
+@media screen and (max-width: 1600px){
+    .getStarted h1 {
+        font-size:4.5rem;
+        width: 40vw;
+        
     }
-
-    .infoBox {
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        background-color: var(--accent-blue);
-        z-index: 1;
-        height: 12rem;
-        width: 15rem;    
-        border-radius: 2em;
-        margin-right: 2vw;
-        margin-bottom: 4vh;
+    .getStartedP{
+width: 40vw;
     }
+ 
+}
+@media screen and (max-width: 1200px){
+    .getStarted h1 {
+        font-size:4rem;
+        width:50vw;
+        
+    }
+ 
+}
 
+@media screen and (max-width: 750px){
+
+    .getStarted h1 {
+        font-size:3.5rem;
+        font-weight: 600;
+        margin-bottom:  5vh;
+        margin-top: 20vh;
+        width: 80vw;
+        line-height: 1.2;
+    }
+    .getStarted p {
+        font-size: 1.1rem;
+        width: 70%;
+        margin-bottom: 10px;
+        width: 80vw;
+    }
+.getStarted {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height:80vh;
+
+}
+
+.getStartedButton {
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    height: 5rem;
+    width: 12rem;
+    font-size: 1rem;
+}
+
+.infoBox{
+display: flex;
+position: relative;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+height:15vh;
+
+
+margin: 0;
+margin-top: -5vh;
+width: 55vw;
+}
+.infoBox p {
+padding: 10px;
+}
+.getStartedouter {
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+height: 100vh;
+margin-top: -10vh;
+width: 100vw;
+background-color: var(--background-offwhite);
+}
+
+.bkgrndFloat{
+display: none;
+
+
+}
+}
+
+
+@media screen and (max-width: 375px){
+
+    .getStarted h1 {
+        font-size:3rem;
+        width:80vw;
+        
+    }
     .exclaimimg { 
-        position: absolute;
-        top: 5rem;
-        height: 10rem;
-        width:10rem;
-        margin: 0;
-        padding: 0;
-        z-index: 2;
-        filter: invert(9%) sepia(6%) saturate(30%) hue-rotate(5deg) brightness(94%) contrast(86%);
-        rotate: 10deg;
-
+      display: none;
     }
-
     .waveimg {
-        position: absolute;
-        bottom: 50;
-        left: 50;
-        height: 35rem;
-        rotate: -2deg;
+        height: 25rem;
         width:30rem;
         margin: 0;
         padding: 0;
@@ -54,227 +239,41 @@
         filter: invert(95%) sepia(1%) saturate(5419%) hue-rotate(178deg) brightness(101%) contrast(92%);
         
     }
-    
-    
+    .infoBox{
+         width: 60vw;
+     }
     .infoBox p {
-        color: #242424;
-        font-size: 0.8rem;
-        line-height: 1.5;
-        margin-bottom: 0;
-        margin-top: 0;
-        text-align: center;
-        padding: 1rem 1rem;
-        
+        padding: 10px;
+        font-size: 0.7rem;
     }
     .getStarted h1 {
-        color: #242424;
-        font-size: 5.2rem;
+        font-size:3rem;
         font-weight: 600;
+        margin-bottom:  5vh;
+        margin-top: 20vh;
+        width: 80vw;
         line-height: 1.2;
-        margin-bottom: 5vh;
-        margin-top: 0;
-        padding: 0;
-        text-align: center;
-        width:30vw;
-        z-index: 1;
-
     }
-    .getStartedP{
-        color: #242424;
-        font-size: 1.2rem;
-        font-weight: 400;
-        line-height: 1.33;
-        margin-bottom: 0;
-        margin-top: 0;
-        width: 30vw;
-        padding: 0;
-        text-align: center;
-        margin-bottom: 5vh;
-    }
-    .infoBoxImg {
-        height: 1.6em;
-        width: 1.6em;
-    }
-
-    .getStartedButton {
-        height: 6rem;
-        width: 15rem;
-        margin: 0;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        background-color: var(--header-main);
-        color: #ffffff;
-        font-size: 1.2rem;
-        border: 4px solid var(--header-main);
-        font-weight: 700;
-        border-radius: 17.4rem;
-        
-    }
-    .getStartedButton:hover{
-        background-color: var(--header-main-hover);
-        color: var(--header-main);
-        border: 4px solid var(--header-main);
-        cursor: pointer;
-    }
-
-    .bkgrndFloat{
-        position: absolute;
-        bottom: 0;
-        left: 10vw;
-        
-    }
-    .bkgrndFloatImg {
-        height: 40vh;
-        
-        margin: 0;
-        padding: 0;
-        z-index: 0;
-    }
-    @media screen and (max-width: 1600px){
-        .getStarted h1 {
-            font-size:4.5rem;
-            width: 40vw;
-            
-        }
-        .getStartedP{
-width: 40vw;
-        }
-     
-    }
-    @media screen and (max-width: 1200px){
-        .getStarted h1 {
-            font-size:4rem;
-            width:50vw;
-            
-        }
-     
-    }
-
-    @media screen and (max-width: 750px){
-
-        .getStarted h1 {
-            font-size:3.5rem;
-            font-weight: 600;
-            margin-bottom:  5vh;
-            margin-top: 20vh;
-            width: 80vw;
-            line-height: 1.2;
-        }
-        .getStarted p {
-            font-size: 1.1rem;
-            width: 70%;
-            margin-bottom: 10px;
-            width: 80vw;
-        }
-    .getStarted {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height:80vh;
-
-    }
-
-    .getStartedButton {
-        margin-top: 5vh;
-        margin-bottom: 5vh;
-        height: 5rem;
-        width: 12rem;
+    .getStarted p {
         font-size: 1rem;
+        width: 70%;
+        width: 80vw;
     }
-    
-.infoBox{
-   display: flex;
-   position: relative;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height:15vh;
-
-    
-   margin: 0;
-   margin-top: -5vh;
-    width: 55vw;
-}
-.infoBox p {
-    padding: 10px;
-}
-.getStartedouter {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin-top: -10vh;
-    width: 100vw;
-    background-color: var(--background-offwhite);
 }
 
-.bkgrndFloat{
-display: none;
-  
-    
+
+@media screen and (max-width: 320px){
+
+    .infoBox p {
+        padding: 10px;
+        font-size: 0.7rem;
+    }
+    .getStarted h1 {
+        font-size:2.8rem;
+       
+    }
+    .getStarted p {
+        font-size: 0.9rem;
+       
+    }
 }
-    }
-
- 
-    @media screen and (max-width: 375px){
-
-        .getStarted h1 {
-            font-size:3rem;
-            width:80vw;
-            
-        }
-        .exclaimimg { 
-          display: none;
-        }
-        .waveimg {
-            height: 25rem;
-            width:30rem;
-            margin: 0;
-            padding: 0;
-            z-index: 0;
-            filter: invert(95%) sepia(1%) saturate(5419%) hue-rotate(178deg) brightness(101%) contrast(92%);
-            
-        }
-        .infoBox{
-             width: 60vw;
-         }
-        .infoBox p {
-            padding: 10px;
-            font-size: 0.7rem;
-        }
-        .getStarted h1 {
-            font-size:3rem;
-            font-weight: 600;
-            margin-bottom:  5vh;
-            margin-top: 20vh;
-            width: 80vw;
-            line-height: 1.2;
-        }
-        .getStarted p {
-            font-size: 1rem;
-            width: 70%;
-            width: 80vw;
-        }
-    }
-
-
-    @media screen and (max-width: 320px){
-
-        .infoBox p {
-            padding: 10px;
-            font-size: 0.7rem;
-        }
-        .getStarted h1 {
-            font-size:2.8rem;
-           
-        }
-        .getStarted p {
-            font-size: 0.9rem;
-           
-        }
-    }
-
