--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,11 +1,11 @@
-  html, body{
+  .App{
 
       justify-content: center;
       background-color: #e7e0bd;
       color: white;
       margin: 0;
       padding: 0;
-      width: 100vw;
+      min-width: 100%;
       max-width: 100%;
       background-color: black;
       z-index: 101;
