--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -1,4 +1,4 @@
-  
+
       #navbar-container {
         position: sticky;
         top: -10vh; 
@@ -278,8 +278,9 @@
       opacity: 1;
     }
 #profileicon{
-  width: 3rem;
+  width: 2rem;
   height: 5vh;
+  margin: 0;
   justify-content: center;
   margin-top: 0.5vh;
 }
