--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -5,8 +5,8 @@
       color: white;
       margin: 0;
       padding: 0;
-      min-width: 100%;
-      max-width: 100%;
+      max-width: 100vw;
+      max-width: 100vw;
       background-color: black;
       z-index: 101;
  
