--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -7,7 +7,7 @@
     align-items: center;
     height: 150vh;
 
-    width: 100vw;
+    width: 101%;
     padding: 0;
     margin: 0;
     margin-top: -20vh;
