--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -1,6 +1,7 @@
 
       #navbar-container {
         position: sticky;
+
         top: -10vh; 
         background-color: transparent;
         z-index: 100;
@@ -9,6 +10,11 @@
       }
       .outerNav {
         width: 100vw;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        justify-content: center;
       }
   .navbar{
       background-color: transparent;
@@ -19,7 +25,7 @@
       margin: 0;
       padding: 0;
       height: 10vh;
-      width: 100%;
+      width: 95%;
       top: 0;
       z-index: 100;
     }
@@ -277,9 +283,14 @@
       background: transparent;
       opacity: 1;
     }
+
+    .svg-icon {
+      width: 1.5em;
+      height: 1.5em;
+    }
 #profileicon{
-  width: 2rem;
-  height: 5vh;
+  width: 3rem;
+  height: 6vh;
   margin: 0;
   justify-content: center;
   margin-top: 0.5vh;
