--- a/src/pages/getStarted/getStarted.css
+++ b/src/pages/getStarted/getStarted.css
@@ -1,17 +1,17 @@
-.getStarted {
+/* Updated CSS with logical class names for GetStarted component */
+.get-started {
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height:100vh;
+    height: 100vh;
     margin-top: -10vh;
     width: 100vw;
     background-color: var(--background-offwhite);
-
 }
 
-.infoBox {
+.info-box {
     position: absolute;
     bottom: 0;
     right: 0;
@@ -22,41 +22,38 @@
     background-color: var(--accent-blue);
     z-index: 1;
     height: 12rem;
-    width: 15rem;    
+    width: 15rem;
     border-radius: 2em;
     margin-right: 2vw;
     margin-bottom: 4vh;
 }
 
-.exclaimimg { 
+.exclaim-img {
     position: absolute;
     top: 5rem;
     height: 10rem;
-    width:10rem;
+    width: 10rem;
     margin: 0;
     padding: 0;
     z-index: 2;
     filter: invert(9%) sepia(6%) saturate(30%) hue-rotate(5deg) brightness(94%) contrast(86%);
     rotate: 10deg;
-
 }
 
-.waveimg {
+.wave-img {
     position: absolute;
     bottom: 50;
     left: 50;
     height: 10rem;
     rotate: -2deg;
-    width:60rem;
+    width: 30rem;
     margin: 0;
     padding: 0;
     z-index: 0;
     filter: invert(95%) sepia(1%) saturate(5419%) hue-rotate(178deg) brightness(101%) contrast(92%);
-    
 }
 
-
-.infoBox p {
+.info-box p {
     color: #242424;
     font-size: 0.8rem;
     line-height: 1.5;
@@ -64,9 +61,9 @@
     margin-top: 0;
     text-align: center;
     padding: 1rem 1rem;
-    
 }
-.getStarted h1 {
+
+.get-started-title {
     color: #242424;
     font-size: 5.2rem;
     font-weight: 600;
@@ -75,11 +72,11 @@
     margin-top: 0;
     padding: 0;
     text-align: center;
-    width:30vw;
+    width: 30vw;
     z-index: 1;
-
 }
-.getStartedP{
+
+.get-started-p {
     color: #242424;
     font-size: 1.2rem;
     font-weight: 400;
@@ -91,12 +88,13 @@
     text-align: center;
     margin-bottom: 5vh;
 }
-.infoBoxImg {
+
+.info-box-img {
     height: 1.6em;
     width: 1.6em;
 }
 
-.getStartedButton {
+.get-started-button {
     height: 6rem;
     width: 15rem;
     margin: 0;
@@ -110,179 +108,198 @@
     font-weight: 700;
     border-radius: 17.4rem;
     border: 0;
-    
 }
-.getStartedButton:hover{
+
+.get-started-button:hover {
     background-color: var(--header-main-hover);
     color: var(--header-main);
     border: 4px solid var(--header-main);
     cursor: pointer;
 }
 
-.bkgrndFloat{
+.background-float {
     position: absolute;
     bottom: 0;
     left: 10vw;
-    
 }
-.bkgrndFloatImg {
+
+.background-float-img {
     height: 40vh;
-    
     margin: 0;
     padding: 0;
     z-index: 0;
 }
-@media screen and (max-width: 1600px){
-    .getStarted h1 {
-        font-size:4.5rem;
+
+@media screen and (max-width: 1440px) {
+    .get-started-title {
+        font-size: 4.5rem;
         width: 40vw;
-        
     }
-    .getStartedP{
-width: 40vw;
+
+    .get-started-p {
+        width: 40vw;
     }
- 
-}
-@media screen and (max-width: 1200px){
-    .getStarted h1 {
-        font-size:4rem;
-        width:50vw;
-        
-    }
- 
 }
 
-@media screen and (max-width: 750px){
+@media screen and (max-width: 1200px) {
+    .get-started-title {
+        font-size: 4rem;
+        width: 50vw;
+    }
+    .wave-img {
+        top: 18rem;
+        width: 20rem;
+    }
+   .background-float-img {
+        height: 30vh;
+    }
+   
+}
 
-    .getStarted h1 {
-        font-size:3.5rem;
+@media screen and (max-width: 750px) {
+    .get-started-title {
+        font-size: 3.5rem;
         font-weight: 600;
-        margin-bottom:  5vh;
+        margin-bottom: 5vh;
         margin-top: 20vh;
         width: 80vw;
         line-height: 1.2;
     }
-    .getStarted p {
+
+    .get-started p {
+
         font-size: 1.1rem;
-        width: 70%;
-        margin-bottom: 10px;
+        width: 60%;
+    }
+
+    .get-started {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 80vh;
+    }
+
+    .get-started-button {
+        margin-top: 1vh;
+        margin-bottom: 5vh;
+        height: 5rem;
+        width: 12rem;
+        font-size: 1rem;
+    }
+
+    .info-box {
+        display: flex;
+        position: relative;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 15vh;
+        margin: 0;
+        margin-top: -5vh;
+        width: 55vw;
+    }
+
+    .info-box p {
+        padding: 10px;
+    }
+
+    .get-started-outer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        margin-top: -10vh;
+        width: 100vw;
+        background-color: var(--background-offwhite);
+    }
+
+    .background-float {
+        display: none;
+    }
+    .wave-img {
+        top:17rem;
+    }
+}
+.exclaim-img {
+    display: none;
+}
+@media screen and (max-width: 425px) {
+.wave-img {
+    width: 70vw;
+}
+
+}
+
+@media screen and (max-width: 375px) {
+    .get-started-title {
+        font-size: 3rem;
         width: 80vw;
     }
-.getStarted {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height:80vh;
 
-}
-
-.getStartedButton {
-    margin-top: 5vh;
-    margin-bottom: 5vh;
-    height: 5rem;
-    width: 12rem;
-    font-size: 1rem;
-}
-
-.infoBox{
-display: flex;
-position: relative;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-height:15vh;
-
-
-margin: 0;
-margin-top: -5vh;
-width: 55vw;
-}
-.infoBox p {
-padding: 10px;
-}
-.getStartedouter {
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-height: 100vh;
-margin-top: -10vh;
-width: 100vw;
-background-color: var(--background-offwhite);
-}
-
-.bkgrndFloat{
-display: none;
-
-
-}
-}
-
-
-@media screen and (max-width: 375px){
-
-    .getStarted h1 {
-        font-size:3rem;
-        width:80vw;
-        
+    .exclaim-img {
+        display: none;
     }
-    .exclaimimg { 
-      display: none;
-    }
-    .waveimg {
-        height: 25rem;
-        width:20rem;
+
+    .wave-img {
+        height: 20rem;
+        width:18rem;
+        top: 11rem;
         margin: 0;
         padding: 0;
         z-index: 0;
         filter: invert(95%) sepia(1%) saturate(5419%) hue-rotate(178deg) brightness(101%) contrast(92%);
-        
     }
-    .infoBox{
-         width: 60vw;
-     }
-    .infoBox p {
+
+    .info-box {
+        width: 60vw;
+    }
+
+    .info-box p {
         padding: 10px;
         font-size: 0.7rem;
     }
-    .getStarted h1 {
-        font-size:3rem;
+
+    .get-started-title {
+        font-size: 3rem;
         font-weight: 600;
-        margin-bottom:  5vh;
+        margin-bottom: 5vh;
         margin-top: 20vh;
         width: 80vw;
         line-height: 1.2;
     }
-    .getStarted p {
+
+    .get-started p {
         font-size: 1rem;
         width: 70%;
-        width: 80vw;
     }
 }
 
-
-@media screen and (max-width: 320px){
-
-    .infoBox p {
+@media screen and (max-width: 320px) {
+    .info-box p {
         padding: 10px;
         font-size: 0.7rem;
     }
-    .getStarted h1 {
-        font-size:2.8rem;
-       
+
+    .get-started-title {
+        font-size: 2.8rem;
     }
-    .getStarted p {
+
+    .get-started p {
         font-size: 0.9rem;
-       
+        width: 80%;
     }
-    .waveimg {
-        height: 25rem;
-        width:18rem;
+
+    .wave-img {
+        height: 20rem;
+        width: 15rem;
+        top: 11rem;
         margin: 0;
         padding: 0;
         z-index: 0;
         filter: invert(95%) sepia(1%) saturate(5419%) hue-rotate(178deg) brightness(101%) contrast(92%);
-        
     }
+
+ 
 }
