faq subject box contrast

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ code {
  --light-blue: #8ed4e9;
  --accent-yellow:#f2f5d9;
  --accent-blue:#d9eaf5;
- --accent-pink:#fae3f4;
+ --accent-pink:#fde2f5;
   --background-offwhite: #fcfaf6;
  
 }
