--- a/src/pages/FAQ/FAQ.css
+++ b/src/pages/FAQ/FAQ.css
@@ -14,15 +14,15 @@
     font-weight: 300;
 }
 .faq2-title {
-    font-size: 0.8rem;
-    color: var(--background-offwhite);
+    font-size: 1rem;
+    color: var(--main-blue);
     font-weight: 300;
 }
 
 /* Individual FAQ item styles */
 .faq2-subject {
     width: 60vw;
-    background-color: var(--header-main);
+    background-color: var(--accent-pink);
     border-radius: 25px;
     margin-bottom: 1rem;
     padding: 20px;
@@ -62,6 +62,7 @@
     padding: 20px;
     height: auto;
     width: 60vw;
+
 }
 
 .faq2-content.open {
@@ -105,6 +106,7 @@
     max-height: 500px; /* Adjust the value as needed for your content */
     color: #fff;
     width: 35vw;
+    margin-top: 1.5rem;
     margin-left: 2vw;
     line-height: 1.5;
     font-size: 1rem;
