--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -406,15 +406,17 @@ font-size: 3rem;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  border: 4px solid var(--header-main);
   background-color: var(--header-main);
   color: #ffffff;
   font-weight: 700;
   font-size: 1.2rem;
   border-radius: 17.4rem;
-  border: 0;
+
 }
 .landingSubButton {
   background-color: var(--main-blue);
+  border: 4px solid var(--main-blue);
 }
 
 .landingButton:hover, .landingSubButton:hover {
