--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -1,13 +1,15 @@
 .profile {
   margin: 0 auto;
+  height: 110vh;
   width: 100vw;
   margin: 0;
   margin-top: -10vh;
-  background-color: #f5f5f5;
+  background-color:var(--background-offwhite);
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
+  color: #000;
   
 }
 
