--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -100,7 +100,7 @@ margin-top: 10vh;
 }
 
 /* Landing Section 4 Styles */
-.landingSection4 {
+.landing-section-3 {
   width: 100%;
   height: 100vh;
   margin-top: -20vh;
@@ -158,7 +158,7 @@ margin-top: 10vh;
 
 }
 
-.landingSubOuter4 {
+.landing-section-3-container {
   width: 100%;
   height: 100vh;
   margin-top: 0vh;
@@ -186,7 +186,7 @@ margin-top: 10vh;
 }
 
 
-.landingSub4Info {
+.landing-section-3-info {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -233,18 +233,6 @@ margin: 0;
   /* You can add more styling as needed for individual foodType divs */
 }
 
-/* Food Type Styles */
-.foodType {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-width: 700px;
-  margin: 2rem;
-  height: 45vh;
-  border-radius: 3.4rem;
-  background-color: var(--header-main);
-}
 
 /* Landing Info Styles */
 .landing-main-Info {
@@ -296,7 +284,7 @@ color: #ffffff;
 }
 
 /* Landing Section 4 Content Styles */
-.landingSub4Title {
+.landing-section-3-sub {
   font-size: 4rem;
   margin: 0;
   margin-top: 30vh;
@@ -304,7 +292,7 @@ color: #ffffff;
   color: var(--background-offwhite);
 }
 
-.landingSub4Para {
+.landing-section-3-para {
   font-size: 1.5rem;
   font-weight: 300;
   width: 45vw;
@@ -314,13 +302,13 @@ color: #ffffff;
 }
 
 /* Input Container Styles */
-.input-container {
+.landing-section-3-input-container{
   display: flex;
   align-items: center;
   height: auto;
 }
 
-.input-container input[type="text"] {
+.landing-section-3-input-container input[type="text"] {
   flex: 1;
   padding: 10px;
   width: 35vw;
@@ -341,7 +329,7 @@ color: #ffffff;
 }
 
 /* Input Button Styles */
-.input-container button {
+.landing-section-3-input-container button {
   background-color: var(--main-blue); /* Change this to your desired button style */
   color: #fff;
   padding: 10px;
@@ -357,7 +345,7 @@ color: #ffffff;
   border: 0;
 }
 
-.input-container button:hover {
+.landing-section-3-input-container button:hover {
   background-color: var(--background-offwhite);
   color: var(--main-blue);
   border: 4px solid var(--main-blue);
@@ -452,7 +440,7 @@ font-size: 3rem;
 
 
   
-  .landingSubOuter4, .landing-section-1-container, .landingSub4Content, .landingSection4 {
+  .landing-section-3-container, .landing-section-1-container, .landing-section-3-content, .landing-section-3 {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -468,12 +456,12 @@ font-size: 3rem;
     margin-right:5rem;
   }
   
-  .landingSub4Title {
+  .landing-section-3-sub{
     text-align: center;
     font-size: 4rem;
     margin-top: 5vh;
   }
-  .landingSub4Para {
+  .landing-section-3-para {
     text-align: center;
     font-size: 1.4rem;
     width: 65vw;
@@ -482,14 +470,14 @@ font-size: 3rem;
     text-align: center;
   }
   
-  .input-container input[type="text"] {
+  .landing-section-3-input-container input[type="text"] {
     width: 50vw;
     height: 8.5vh;
     border-radius: 35.4rem;
     font-size: 1.2rem;
     margin-top: 1rem;
   }
-  .input-container button {
+  .landing-section-3-input-container button {
     padding: 10px;
     margin-left: -18.6vw;
     margin-top: 0.6vh;
@@ -600,7 +588,7 @@ font-size: 3rem;
     width: 80vw;
   }
 
-  .landingSubOuter4 {
+  .landing-section-3-container {
     height: 90vh;
   }
 
@@ -624,7 +612,7 @@ font-size: 3rem;
 
   }
 
-  .landingSubOuter4, .landing-section-1-container, .landingSub4Content, .landingSection4 {
+  .landing-section-3-container, .landing-section-1-container, .landing-section-3-content, .landing-section-3 {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -638,12 +626,12 @@ font-size: 3rem;
   }
   
   
-  .landingSub4Title {
+  .landing-section-3-sub{
     text-align: center;
     font-size: 3rem;
     margin-top: 5vh;
   }
-  .landingSub4Para {
+  .landing-section-3-para {
     text-align: center;
     font-size: 1.2rem;
     width: 80vw;
@@ -652,14 +640,14 @@ font-size: 3rem;
     text-align: center;
   }
   
-  .input-container input[type="text"] {
+  .landing-section-3-input-container input[type="text"] {
     width: 65vw;
     height: 5.5vh;
     border-radius: 35.4rem;
     font-size: 1rem;
     margin-top: 1rem;
   }
-  .input-container button {
+  .landing-section-3-input-container button {
     padding: 10px;
     margin-left: -15.6vw;
     margin-top: 0.6vh;
@@ -746,7 +734,7 @@ font-size: 3rem;
     max-width: 100%;
 
   }
-.landingSubOuter4, .landingSection4 {
+.landing-section-3-container, .landing-section-3 {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -758,20 +746,20 @@ font-size: 3rem;
  max-width: 100%;
 
 }
-.landingSub4Content {
+.landing-section-3-content {
   margin-top: 10rem;
   max-width: 100%;
 
 }
 
-.landingSub4Title {
+.landing-section-3-sub{
   text-align: center;
   font-size: 3rem;
   margin-top: 5vh;
   max-width: 100%;
 
 }
-.landingSub4Para {
+.landing-section-3-para {
   text-align: center;
   font-size: 1.2rem;
   width: 80vw;
@@ -783,14 +771,14 @@ font-size: 3rem;
 }
 
 
-.input-container input[type="text"] {
+.landing-section-3-input-container input[type="text"] {
   width: 70vw;
   height: 5vh;
   border-radius: 35.4rem;
   font-size: 1rem;
   margin-top: 1rem;
 }
-.input-container button {
+.landing-section-3-input-container button {
   padding: 10px;
   margin-left: -19vw;
   margin-top: 0.8vh;
@@ -875,7 +863,7 @@ font-size: 3rem;
     border-radius: 17.4rem;
     border: 0;
   }
-.landingSubOuter4, .landingSection4 {
+.landing-section-3-container, .landing-section-3 {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -885,7 +873,7 @@ font-size: 3rem;
   margin-top: -10vh;
  height:70vh;
 }
-.landingSub4Content {
+.landing-section-3-content {
   margin-top: 10rem;
 }
 .landing-section-1-info h1 {
@@ -894,13 +882,13 @@ font-size: 3rem;
 
 }
 
-.landingSub4Title {
+.landing-section-3-sub{
   text-align: center;
   font-size: 1.9rem;
   margin-top: 5vh;
   width: 90vw;
 }
-.landingSub4Para {
+.landing-section-3-para {
   text-align: center;
   font-size: 1.2rem;
   width:90vw;
@@ -910,14 +898,14 @@ font-size: 3rem;
 }
 
 
-.input-container input[type="text"] {
+.landing-section-3-input-container input[type="text"] {
   width: 80vw;
   height: 4.5vh;
   border-radius: 35.4rem;
   font-size: 0.9rem;
   margin-top: 1rem;
 }
-.input-container button {
+.landing-section-3-input-container button {
   padding: 10px;
   margin-left: -21vw;
   margin-top: 0.7vh;
