--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -701,14 +701,14 @@ font-size: 3rem;
   }
   .lookinat{
   display: flex;
-    top: 65vh;
-    left: 25%;
-    width:60vw;
+    top: 70vh;
+    left: 55%;
+    width:40vw;
     margin: 0;
     margin-top: 2vh;
     z-index: 100;
     max-width: 100%;
-    filter: invert(100%) sepia(6%) saturate(30%) hue-rotate(5deg) brightness(94%) contrast(86%);
+    filter: invert(0%) sepia(6%) saturate(30%) hue-rotate(5deg) brightness(94%) contrast(86%);
   } 
   .landing-main-Info  h2 {
     font-size: 1rem;
@@ -801,9 +801,13 @@ font-size: 3rem;
 }
 .starsimglanding{
   position: absolute;
-  bottom:  10vh;
+  top: 122rem;
   left: 12vw;
 } 
+
+.landing-section-2-container{
+  background-size:200%; 
+}
 
 }
 
